[metadata]
name = tornadox
version = 0.0.1
author = A. Nonymous
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.8
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
    scipy
    tqdm
    jax
    jaxlib
    matplotlib
    pandas

[options.extras_require]
contrib =
    pytest
    pylint
    black>=22.1
    isort
