[metadata]
name = tornadox
author = Nicholas Krämer, Nathanael Bosch, Jonathan Schmidt
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    tqdm
    jax
    jaxlib

[options.extras_require]
contrib =
    pytest
    pylint
    black>=22.1
    isort
