[metadata]
name = tornadox
author = Nicholas Krämer, Nathanael Bosch, Jonathan Schmidt
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8


[options.extras_require]
contrib =
    tox

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[black]
include = '\.pyi?$'
exclude = '''
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist'''
